# future-of-fintech

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
empower/: __init__.py  api_helper.py  db.py  home.py  schema.sql  transformer.py
empower/templates/: base.html
empower/templates/home/: index.html
empower/templates/transformer/: consumption.html  providers.html
