[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[project]
name = "empower"
version= "1.0.0"
authors = [
    {name = "Tord Nytun", email = "tordnytun@hotmail.com"},
]
description = "A small package to deploy a flask app"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask~=2.2.2"
]
[project.urls]
"Homepage" = "https://github.com/retorded/future-of-fintech"



# dynamic = ["version"]